# reachSolver

./: .gitignore  CMakeLists.txt  README.md  commonType.h  setup.txt
.devcontainer/: Dockerfile
cmake/: macros.cmake
dynamics/: Linear.cpp
examples/: test1.cpp
src/: CMakeLists.txt
src/autodiff/: derivative.hpp
src/dynamics/: CMakeLists.txt  ContDynamics.cpp  ContDynamics.h  Dynamic.cpp  Dynamic.h  Linear.h  LinearSys.cpp  LinearSys.h  Nonlinear.h  NonlinearSys.cpp  NonlinearSys.h  ReachOptions.cpp  ReachOptions.h  ReachSpecification.h  ReachableSet.cpp  ReachableSet.h  TimeRelated.cpp  TimeRelated.h  derivatives.h  hessian.cpp  jacobian.cpp
src/test/: CMakeLists.txt  ZonotopeTest.cpp  test.h  zonotope_test.cpp
src/zonotope/: BasicObject.cpp  BasicObject.h  CMakeLists.txt  Zonotope.cpp  Zonotope.h  commonType.h  old.cpp
zonotope/: Set.h  Zonotope.cpp  Zonotope.h
